# RoseTerm

./: Cargo.toml  README.md
src/: main.rs
src/backend/: pty.rs
src/gui/: window.rs
src/renderer/: font.rs
src/terminal/: grid.rs
